prevents overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 input,
